...
            "state": "translated",
            "value": "Deel"
          }
        }
      }
    },
    "Share something": {
      "localizations": {
        "nl": {
          "stringUnit": {
            "state": "translated",
            "value": "Deel iets"
          }
...
